# kyleondy.com

./: .dockerignore  .drone.yml  .drone.yml.sig  .gitignore  .mergify.yml  .textlintrc  .travis.yml  CNAME  Dockerfile  Makefile  README.md  Readme.markdown  build.sh  deploy  deploy.sh  flake.nix  index.html  kyleondy-com.cabal  kyleondy.cabal  make.bat  newDraft.sh  pgp.txt  preCommitCheck.sh  project.clj  s3_website.yml  shell.nix  stack.yaml  test.sh  todo.txt  tst.html  update-llts.sh  update_gpg.sh
404/: index.html
_tmp/notes/: bash.metadata.json  books.metadata.json  clojure_for_the_brave_and_true.metadata.json  curl.metadata.json  debian.metadata.json  docker.metadata.json  english.metadata.json  git.metadata.json  gpg.metadata.json  grep.metadata.json  haskell.metadata.json  kobo.metadata.json  make.metadata.json  neovim.metadata.json  powershell.metadata.json  sed.metadata.json  ssh.metadata.json  tmux.metadata.json  vim.metadata.json  winrm.metadata.json
_tmp/pages/: about.metadata.json  contact.metadata.json  hire.metadata.json  opensource.metadata.json  pgp.metadata.json  support.metadata.json  todo.metadata.json
about/: index.html
contact/: index.html
content/notes/: bash.markdown  books.markdown  clojure_for_the_brave_and_true.markdown  english.markdown  neovim.markdown  sed.markdown  ssh.markdown
content/pages/: contact.markdown  opensource.markdown
content/templates/: content.html  note-list.html
css/: site.css
docker/: Dockerfile
hire/: index.html
nix/: sources.json
notes/: index.html
notes/bash/: index.html
notes/books/: index.html
notes/clojure-for-the-brave-and-true/: index.html
notes/cooking/: index.html
notes/curl/: index.html
notes/debian/: index.html
notes/docker/: index.html
notes/english-grammar/: index.html
notes/git/: index.html
notes/gpg/: index.html
notes/grep/: index.html
notes/haskell/: index.html
notes/kobo-reader/: index.html
notes/nvim/: index.html
notes/powershell/: index.html
notes/sed/: index.html
notes/ssh/: index.html
notes/tmux/: index.html
notes/vim/: index.html
notes/winrm/: index.html
opensource/: index.html
pgp/: index.html
posts/: index.html
posts/a-faster-way-to-amend-a-git-commit/: index.html
posts/automatic-installation-of-vim-plug/: index.html
posts/docker-stack-symlinks-errors/: index.html
posts/generating-this-web/: index.html
posts/home-lab-bootstrapping/: index.html
posts/home-lab-part-1/: index.html
posts/nix-within-wsl/: index.html
provider/: cv.markdown  index.html  pgp.txt
src/: README.md  Site.hs  package.yaml
support/: index.html
todo/: index.html
(+117 files in other folders)
