name:               kyleondy-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable hakyll-kyleondy
  hs-source-dirs:   provider/posts/site
  main-is:          site.lhs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , hakyll-sass
                  , filepath
                  , time
                  , process
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
