name:               kyleondy
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site-kyleondy
  hs-source-dirs:   src/
  main-is:          Site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , filepath
                  , process
                  , pandoc
  ghc-options:      -threaded -Wall -O2
  default-language: Haskell2010
