name:               kyleondy
version:            0.1.0.0
synopsis:           Personal site and blog
homepage:           kyleondy.com
author:             Kyle Ondy
maintainer:         kyle@ondy.me
copyright:          (c) 2017 Kyle Ondy
build-type:         Simple
cabal-version:      >= 1.10

executable site-kyleondy
  hs-source-dirs:   provider/posts, provider/pending-posts
  main-is:          Site.lhs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , containers
                  , filepath
                  , pandoc
                  , time
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
